base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: aylee-front
  labels:
    app.kubernetes.io/name: aylee-front
spec:
  strategy:
    canary:
      steps:
        - setWeight: 30
        - pause: {}
  revisionHistoryLimit:
  selector:
    matchLabels:
      app.kubernetes.io/name: aylee-front
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: aylee-front
        app.kubernetes.io/version: 2021-09-14T00.00.00
    spec:
      serviceAccountName: aylee-front
      securityContext: {}
      containers:
        - name: aylee-front
          securityContext: {}
          image: "docker.io/aylee5/aylee-sample-front:2021-09-14T00.00.00"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      restartPolicy: Always
