base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aylee-front
  labels:
    app.kubernetes.io/name: aylee-front
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: aylee-front
